[translate] Fix enforcement vs logging for TranslateRanker.

The translate ranker enforcement flag was redundantly enforced
within the ranker itself, thwarting the TranslateManagers attempts
to log the ranker result and enforc (or not) the result. The
check in the TranslateRanker should have been removed in the
last refactor.

BUG=669528

Review-Url: https://codereview.chromium.org/2533953003
Cr-Commit-Position: refs/heads/master@{#435061}

Former-commit-id: 131e0dc96c8c88fc1fc222442a61fb2704b1795d